tests/golden/type_errors/non_exhaustive_nullable_literal_match.cd
let value: number? = 1;
print match value {
  1 => "one",
};
