tests/golden/type_errors/non_exhaustive_nullable_literal_match.err
Type error at 2:7: non-exhaustive match: missing nil
  print match value {
        ^
